adicionada a seção de conteudos

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -628,6 +628,142 @@ section {
 }
 
 /*--------------------------------------------------------------
+# Content
+--------------------------------------------------------------*/
+
+.content .content-item {
+  margin-bottom: 30px;
+}
+
+.content #content-flters {
+  padding: 0;
+  margin: 0 0 35px 0;
+  list-style: none;
+  text-align: center;
+}
+
+.content #content-flters li {
+  cursor: pointer;
+  margin: 0 15px 15px 0;
+  display: inline-block;
+  padding: 5px;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 20px;
+  color: #212529;
+  margin-bottom: 5px;
+  transition: all 0.3s ease-in-out;
+}
+
+.content #content-flters li:hover,
+.content #content-flters li.filter-active {
+  color: #eb5d1e;
+}
+
+.content #content-flters li:last-child {
+  margin-right: 0;
+}
+
+.content .content-wrap {
+  transition: 0.3s;
+  position: relative;
+  overflow: hidden;
+  border-radius: 8px;
+  z-index: 1;
+}
+
+.content .content-wrap::before {
+  content: "";
+  background: rgba(122, 105, 96, 0.6);
+  position: absolute;
+  left: 100%;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  transition: all ease-in-out 0.3s;
+  z-index: 2;
+}
+
+.content .content-wrap img {
+  transition: 0.3s;
+  position: relative;
+  z-index: 1;
+}
+
+.content .content-wrap .content-links {
+  opacity: 0;
+  left: 0;
+  right: 0;
+  top: calc(50% - 32px);
+  text-align: center;
+  z-index: 3;
+  position: absolute;
+  transition: all ease-in-out 0.3s;
+}
+
+.content .content-wrap .content-links a {
+  color: #eb5d1e;
+  margin: 0 4px;
+  line-height: 0;
+  background-color: #fff;
+  padding-top: 6px;
+  padding-right: 1px;
+  border-radius: 50px;
+  text-align: center;
+  width: 32px;
+  height: 32px;
+  display: inline-block;
+  transition: 0.3s;
+}
+
+.content .content-wrap .content-links a i {
+  line-height: 0;
+  font-size: 20px;
+}
+
+.content .content-wrap .content-links a:hover {
+  background: #eb5d1e;
+  color: #fff;
+}
+
+.content .content-wrap .content-info {
+  opacity: 0;
+  position: absolute;
+  bottom: -20px;
+  left: 0;
+  right: 0;
+  text-align: center;
+  z-index: 3;
+  transition: all ease-in-out 0.3s;
+}
+
+.content .content-wrap .content-info h4 {
+  font-size: 20px;
+  color: #fff;
+  font-weight: 600;
+}
+
+.content .content-wrap .content-info p {
+  color: #ffffff;
+  font-size: 14px;
+  text-transform: uppercase;
+}
+
+.content .content-wrap:hover::before {
+  left: 0;
+}
+
+.content .content-wrap:hover .content-links {
+  opacity: 1;
+  top: calc(50% - 16px);
+}
+
+.content .content-wrap:hover .content-info {
+  opacity: 1;
+  bottom: 0;
+}
+
+/*--------------------------------------------------------------
 # Portfolio
 --------------------------------------------------------------*/
 .portfolio .portfolio-item {
