--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -674,7 +674,7 @@ section {
 
 .content .content-wrap::before {
   content: "";
-  background: rgba(122, 105, 96, 0.6);
+  /*background: rgba(122, 105, 96, 0.6);*/
   position: absolute;
   left: 100%;
   right: 0;
@@ -690,41 +690,6 @@ section {
   z-index: 1;
 }
 
-.content .content-wrap .content-links {
-  opacity: 0;
-  left: 0;
-  right: 0;
-  top: calc(50% - 32px);
-  text-align: center;
-  z-index: 3;
-  position: absolute;
-  transition: all ease-in-out 0.3s;
-}
-
-.content .content-wrap .content-links a {
-  color: #eb5d1e;
-  margin: 0 4px;
-  line-height: 0;
-  background-color: #fff;
-  padding-top: 6px;
-  padding-right: 1px;
-  border-radius: 50px;
-  text-align: center;
-  width: 32px;
-  height: 32px;
-  display: inline-block;
-  transition: 0.3s;
-}
-
-.content .content-wrap .content-links a i {
-  line-height: 0;
-  font-size: 20px;
-}
-
-.content .content-wrap .content-links a:hover {
-  background: #eb5d1e;
-  color: #fff;
-}
 
 .content .content-wrap .content-info {
   opacity: 0;
@@ -735,6 +700,18 @@ section {
   text-align: center;
   z-index: 3;
   transition: all ease-in-out 0.3s;
+}
+
+.content .content-wrap h4 {
+  font-size: 20px;
+  color: #000000;
+  font-weight: 600;
+}
+
+.content .content-wrap  p {
+  color: #000000;
+  font-size: 14px;
+  text-transform: uppercase;
 }
 
 .content .content-wrap .content-info h4 {
@@ -809,7 +786,7 @@ section {
 
 .portfolio .portfolio-wrap::before {
   content: "";
-  background: rgba(122, 105, 96, 0.6);
+  /*background: rgba(122, 105, 96, 0.6);*/
   position: absolute;
   left: 100%;
   right: 0;
@@ -880,6 +857,18 @@ section {
 
 .portfolio .portfolio-wrap .portfolio-info p {
   color: #ffffff;
+  font-size: 14px;
+  text-transform: uppercase;
+}
+
+.portfolio .portfolio-wrap h4 {
+  font-size: 20px;
+  color: #000;
+  font-weight: 600;
+}
+
+.portfolio .portfolio-wrap p {
+  color: #000000;
   font-size: 14px;
   text-transform: uppercase;
 }
